Clean up uninitialized threads after 3 hours